5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1800_2572.log
== TEST (2019-06-12 12:51:16) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:51:19) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)

-- EXECUTION TIME:
1.14573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 5, in <module>
    impar = impar + 1
NameError: name 'impar' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:51:24) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:51:52) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:07) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
impar = 0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:52:15) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
impar = 0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:58:56) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
impar = 0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
w = 0
for o in range(size(mat)):
	if(mat[o]%2!=0):
		k[w]= mat[o]
		w = w + 1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:58:56) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
impar = 0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
w = 0
for o in range(size(mat)):
	if(mat[o]%2!=0):
		k[w]= mat[o]
		w = w + 1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:59:00) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
impar = 0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
w = 0
for o in range(size(mat)):
	if(mat[o]%2!=0):
		k[w]= mat[o]
		w = w + 1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:59:18) 
-- CODE:
from numpy import *
mat = array(eval(input("digite as matriculas: ")))
impar = 0
for i in range(size(mat)):
	if(mat[i]%2!=0):
		impar = impar + 1
k = zeros(impar, dtype=int)
w = 0
for o in range(size(mat)):
	if(mat[o]%2!=0):
		k[w]= mat[o]
		w = w + 1
print(k)
-- EXECUTION TIME:
0.986224
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
